# Ingenieria-Informatica-UGR

./: .gitignore  .gitmodules  Material Recomendado.md  README.md  cubo.c  listaDrive.md
1ºCurso/Primer Cuatri/ALEM/: README.md
1ºCurso/Primer Cuatri/Calculo/: README.md
1ºCurso/Primer Cuatri/FFT/: Material Melchor.TXT  README.md
1ºCurso/Primer Cuatri/FP/: README.md
1ºCurso/Primer Cuatri/FS/: README.md
1ºCurso/Segundo Cuatri/ES/: README.md
1ºCurso/Segundo Cuatri/IES/: README.md
1ºCurso/Segundo Cuatri/LMD/: README.md
1ºCurso/Segundo Cuatri/MP/: README.md
1ºCurso/Segundo Cuatri/TOC/: README.md
2Curso/SegundoCuatri/AC/: README.md
2Curso/SegundoCuatri/ALG/: README.md
2Curso/SegundoCuatri/IA/: README.md
2ºCurso/PrimerCuatri/EC/: README.md
2ºCurso/PrimerCuatri/ED/: README.md
2ºCurso/PrimerCuatri/PDOO/: README.md
2ºCurso/PrimerCuatri/SCD/: README.md
2ºCurso/PrimerCuatri/SO/: README.md
2ºCurso/SegundoCuatri/ALG/: README.md
2ºCurso/SegundoCuatri/FBD/: README.md
2ºCurso/SegundoCuatri/FIS/: README.md
2ºCurso/SegundoCuatri/IA/Practicas/practica2/: .gitpod.yml  CMakeLists.txt  FAQ.md  Gscript.sh  MakefileO  coste4.txt  main.cpp
2ºCurso/SegundoCuatri/IA/Practicas/practica2/Comportamientos_Jugador/: jugador.hpp
2ºCurso/SegundoCuatri/IA/Practicas/practica2/bin_src/: juegoSG.cc
2ºCurso/SegundoCuatri/IA/Practicas/practica2/include/: comportamientolib.hpp  modelos_belkan.hpp  motorlib.hpp
2ºCurso/SegundoCuatri/IA/Practicas/practica2/include/comportamientos/: comportamiento.hpp
2ºCurso/SegundoCuatri/IA/Practicas/practica2/include/modelos/perro/: cabeza.hpp
2ºCurso/SegundoCuatri/IA/Practicas/practica2/include/motorlib/: mapa.hpp  monitor.hpp
2ºCurso/SegundoCuatri/IA/Practicas/practica2/mapas/: cuadricula.map  mapa100b.map  mapa30.map  mapa50.map  marymonte.map  medieval.map  scape.map  vertigo.map
2ºCurso/SegundoCuatri/IA/Practicas/practica2/src/glui/: arcball.cpp  glui_bitmaps.cpp  glui_button.cpp  glui_column.cpp  glui_listbox.cpp  glui_separator.cpp  glui_spinner.cpp  glui_statictext.cpp  glui_string.cpp  quaternion.cpp
2ºCurso/SegundoCuatri/IA/Practicas/practica2/src/modelos/aldeano/: cabeza.cpp
2ºCurso/SegundoCuatri/IA/Practicas/practica2/src/modelos/item/: item.cpp
2ºCurso/SegundoCuatri/IA/Practicas/practica2/src/modelos/perro/: perro.cpp
2ºCurso/SegundoCuatri/IA/Practicas/practica2/src/motorlib/: motor_grafico.cpp  motor_juego.cpp  util.cpp
2ºCurso/SegundoCuatri/IA/Practicas/practica2/src/obj3dlib/: cubo3d.cc  dodecaedro3d.cc  esfera3d.cc  luz.cpp  objeto3d.cc
3ºCurso/Primer Cuatri/DDSI/: README.md
3ºCurso/Primer Cuatri/FR/: README.md
3ºCurso/Primer Cuatri/IG/: README.md
3ºCurso/Primer Cuatri/ISE/: README.md
3ºCurso/Primer Cuatri/MC/: README.md
3ºCurso/Segundo Cuatri CSI/MH/Practica03/software/: CMakeLists.txt
3ºCurso/Segundo Cuatri CSI/MH/Practica03/software/cabeceras/: algoritmosTrayectoria.h
3ºCurso/Segundo Cuatri CSI/MH/Practica03/software/fuentes/: busquedaLocal.cpp
AA/Practicas/P0/: P0terminado.ipynb
AA/Practicas/Proyecto Final/: PROYECTO_FINAL_AA.ipynb
IC/Practicas/Entrega1/: Practica1_RelacionFamiliar.clp  Practica2_4enRaya_7x6.clp  Practica3_sistemaExperto.clp
IC/Practicas/Entrega2/: FuzzyLogic.clp  Quehayqueentregar.txt  main.c  tema5.clp
IC/Practicas/Tutorial/: personas.clp  reglas.clp
MAC/MemoriaLatex/: citas.bib  plantilla.bbl  plantilla.blg  plantilla.tex  plantilla.toc
MH/Practica01/MemoriaLatex/: citas.bib
MH/Practicas/Practica01/APC/codigo/: CMakeLists.txt
MH/Practicas/Practica01/APC/codigo/Instancias_APC/: diabetes_1.arff  test.txt
MH/Practicas/Practica01/APC/codigo/headers/: acp.h  dataset.h  funcionesAux.h
MH/Practicas/Practica01/APC/codigo/src/: acp.cpp  dataset.cpp  funcionesAux.cpp  main.cpp
MH/Practicas/Practica01/APC/proyecto/: CMakeLists.txt
MH/Practicas/Practica01/APC/proyecto/Instancias_APC/: diabetes_1.arff  diabetes_3.arff  diabetes_5.arff
MH/Practicas/Practica01/APC/proyecto/headers/: dataset.h  funcionesAux.h  greedy.h
MH/Practicas/Practica01/APC/proyecto/src/: dataset.cpp  funcionesAux.cpp  greedy.cpp  main.cpp
MH/Practicas/Practica01/APC/software/: CMakeLists.txt  LEEME.txt
MH/Practicas/Practica01/APC/software/cabeceras/: busquedaLocal.hpp
MH/Practicas/Practica03/software/: CMakeLists.txt
MH/Practicas/Practica03/software/cabeceras/: algoritmosGeneticos.h  algoritmosTrayectoria.h  apc.h  busquedaLocal.h
MH/Practicas/Practica03/software/fuentes/: algoritmosTrayectoria.cpp  main.cpp
MH/Practicas/PracticaFinal/: repo.txt  (+1 more)
MH/Practicas/PracticaFinal/software/: CMakeLists.txt
MH/Practicas/PracticaFinal/software/cabeceras/: poblacion.h  sheepFlockHeredityModel.h
MH/Practicas/PracticaFinal/software/fuentes/: sheepFlockHeredityModel.cpp
P1/prac1/: cubo.c  modelo.c  piramide.c  practicasIG  visual.c
P2/prac2/: Makefile  cubo.c  cubo.h  entradaTeclado.c  entradaTeclado.h  malla.c  malla.h  modelo.c  modelo.h  mouse.h  objetoRevolucion.c  objetoRevolucion.h  piramide.c  piramide.h  practicasIG  practicasIG.c  practicasIG.h  prismaHexagonal.c  prismaHexagonal.h  salida.txt  visual.c  visual.h
P3/prac3/: Makefile  bici.c  bici.h  entradaTeclado.c  estructura.c  estructura.h  modelo.c  modelo.h  mouse.c  objetoRevolucion.c  objetoRevolucion.h  practicasIG  practicasIG.h
P4/: entradaTeclado.h  malla.h  objetoRevolucion.c
P4/prac4/: Makefile  bici.c  cubo.c  cubo.h  entradaTeclado.c  lector-jpg.h  malla.c  malla.h  modelo.c  modelo.h  objetoRevolucion.c  objetoRevolucion.h  practicasIG  practicasIG.c  textura.c  textura.h
P5/: README.txt  file.txt
P5/MemoriaLatex/: LEEME.bbl  portada.tex
P5/Practica1_2_3_4_5/: file_ply_stl.h  modelo.c
P5/prac5/: bici.c  bici.h  cubo.c  entradaTeclado.c  malla.c  malla.h  modelo.c  modelo.h  mouse.c  visual.c  visual.h
Tercer Curso/Segundo Cuatri CSI/: .gitignore
Tercer Curso/Segundo Cuatri CSI/MH/Practica02/software/: CMakeLists.txt
esqueleto/: Makefile  entradaTeclado.c  entradaTeclado.h  modelo.c  modelo.h  mouse.c  mouse.h  practicasIG  practicasIG.c  practicasIG.h  visual.c  visual.h
(+1563 files in other folders)
